"Fix" burger menu somewhat by making it not transparent anymore and aligning it in mobile.

--- a/app/static/css/screen-dark.css
+++ b/app/static/css/screen-dark.css
@@ -1059,10 +1059,12 @@ table caption {
 
 .burger {
     position: fixed;
+    top: 2px;
+    left: 5px;
     font-size: 2em;
     cursor: pointer;
     z-index: 1000;
-    background-color: rgba(20, 20, 20, 1);
+    background-color: var(--main-bg);
 }
 
 .darkmode {
