--- a/app/static/css/screen-light.css
+++ b/app/static/css/screen-light.css
@@ -64,10 +64,6 @@ li {
     /* background-color: #f7f3f7; */
 }
 
-.burger {
-    background-color: rgba(238, 238, 238, 1);
-}
-
 .overlay {
     background-color: rgba(238, 238, 238, 0);
 }
